objects/EntityLocation__c.object
<CustomObject>
    <fields>
        <fullName>AccountEID__c</fullName>
        <formula>Location__r.Account__r.AccountEID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClientLocationIDFormula__c</fullName>
        <formula>Location__r.ClientLocationID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntityLocationEID__c</fullName>
        <description>The Enterprise ID for this Entity Location.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Entity Location.</inlineHelpText>
        <label>Entity Location EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <description>Entity that has this location.</description>
        <inlineHelpText>Entity that has this location.</inlineHelpText>
        <label>Entity</label>
        <referenceTo>Entity__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <formula>Trim(Left(Location__r.Name, 40)) &amp; &apos;_&apos; &amp; Trim(Left(Entity__r.Name, 39))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Location that hires under this entity.</description>
        <inlineHelpText>Location that hires under this entity.</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Entities</relationshipLabel>
        <relationshipName>Entities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Entity Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Entity Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Entity Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>